SERVER-50026 Coverity analysis defect 114245: Uninitialized scalar field